# readit-backend

./: .gitignore  README.md  pyproject.toml
app/: Dockerfile  config.py  exceptions.py  run.py
app/api/: __init__.py  dependencies.py
app/api/user/: __init__.py  auth.py
app/bot/: __init__.py  middlewares.py  settings.py  types.py
app/bot/dialogs/: __init__.py
app/infra/admin/: __init__.py  views.py
app/infra/database/: models.py  session.py
app/infra/repository/: __init__.py  base.py  book.py  user.py
app/infra/s3/: client.py  storage.py
app/schemas/: base.py  user.py
app/services/: __init__.py  book.py  user.py
app/utils/: security.py  telegram.py
docker/: docker-compose.base.yml  docker-compose.local.yml  docker-compose.testing.yml
requirements/: requirements.txt  tavern.txt
tests/: data.py
tests/e2e/: config.yml  conftest.py  test_01_ping.tavern.yml
tests/unit/: context.py  test_00_user_service.py
